--- a/index.html
+++ b/index.html
@@ -225,17 +225,17 @@
             <ul class="list-unstyled mb-0">
               <li>
                 <i class="fas fa-map-marker-alt fa-2x"></i>
-                <p>Bengluru India</p>
+                <p>Bengluru,India</p>
               </li>
 
               <li>
                 <i class="fas fa-phone mt-4 fa-2x"></i>
-                <p>+ 01 234 567 89</p>
+                <p>+91-6362992874</p>
               </li>
 
               <li>
                 <i class="fas fa-envelope mt-4 fa-2x"></i>
-                <p>contact@gmail.com.com</p>
+                <p>camharshithaar@gmail.com</p>
               </li>
             </ul>
           </div>
