--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
               <li>
                 <i class="fas fa-envelope mt-4 fa-2x"></i>
-                <p>camharshithaar@gmail.com</p>
+                <p>amharshithaar@gmail.com</p>
               </li>
             </ul>
           </div>
